# phototag

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  GETTING_STARTED.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
phototag/: cli.py  clustering.py  config.py  exif.py  faces.py  geo.py  logging.py  pipeline.py  reporting.py  scanner.py  settings.py  store.py  ui.py  xmp.py
phototag/models/: base.py  clip.py  ram.py
scripts/: progress.sh  refine_noise.py
specs/: 00-overview.md  01-architecture.md  02-stack.md  03-data-model.md  04-pipeline-tagging.md  05-clustering.md  06-search.md  07-reporting.md  08-xmp-categories.md  09-cli.md  10-project-structure.md  11-roadmap.md  12-performance.md  13-risks.md  14-testing.md  15-faces.md  16-improvement-plan.md  README.md
static/: ui.css  ui.js
static/src/: api.js  keyboard.js  lightbox.js  main.js  runs.js  sidebar.js  state.js  workspace.js
templates/: cluster.html.j2  index.html.j2  ui.html
tests/: conftest.py  test_cli.py  test_cli_errors.py  test_exif.py  test_faces_verify.py  test_pipeline.py  test_scanner.py  test_store.py  test_store_faces.py  test_ui_api.py  test_xmp.py  test_xmp_unit.py
tests/fixtures/: fakes.py
